sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#length__false21/errors.duarouter
Error: Attribute 'length' in definition of lane '2_0' is not a real number.
Quitting (on error).
